# ShikenMatrix

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README_EN.md  build.rs  cbindgen.toml  nuxt.config.ts  package.json  pnpm-lock.yaml  shikenmatrix.h
macos-ui/: build-rust.sh
macos-ui/ShikenMatrix/ShikenMatrix/: ContentView.swift  RustBridge.swift  ShikenMatrixApp.swift  StatusBarManager.swift
macos-ui/ShikenMatrix/ShikenMatrix.xcodeproj/: project.pbxproj
macos-ui/ShikenMatrix/ShikenMatrix.xcodeproj/project.xcworkspace/xcuserdata/tianxiang.xcuserdatad/: UserInterfaceState.xcuserstate
macos-ui/rust-lib/: libshikenmatrix.dylib  shikenmatrix.h
src/: app.vue  main.rs
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/platform/macos/: accessibility.rs  media.rs  mod.rs  window.rs
src/assets/: main.css
src/components/: ForegroundWidget.vue  MediaWidget.vue
src/ffi/: config.rs  reporter.rs
src/pages/: index.vue
src/platform/: mod.rs
src/platform/macos/: media.rs  mod.rs
src/plugins/: gsap.client.ts
src/services/: config.rs  reporter.rs
