[package]
name = "shikenmatrix"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"     # 优化二进制大小
lto = true          # 启用链接时优化
codegen-units = 1   # 减少代码生成单元以获得更好的优化
strip = true        # 移除调试符号
panic = "abort"     # 减少 panic 处理代码

[dependencies]
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.149"
toml = "0.9.8"
dirs = "6.0.0"
base64 = "0.22"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync", "time", "macros", "signal"], default-features = false }
tokio-tungstenite = { version = "0.28.0", features = [ "native-tls", "connect" ], default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
url = "2.5"
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# macOS dependencies
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"
objc2 = { version = "0.6.3", default-features = false }
objc2-foundation = { version = "0.3.2", default-features = false, features = [ "NSString", "NSDictionary", "NSURL", "alloc", "NSGeometry", "objc2-core-foundation" ] }
mediaremote-rs = "0.1"
objc2-app-kit = { version = "0.3.2", default-features = false, features = [ "NSRunningApplication", "NSWorkspace", "NSImage", "NSBitmapImageRep", "NSImageRep", "libc" ] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = [ "processthreadsapi", "psapi", "handleapi", "winnt" ] }

[build-dependencies]
cbindgen = "0.29.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0.6"

