[package]
name = "shikenmatrix"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "shikenmatrix_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
tauri = { version = "2.9.3", features = [ "macos-private-api" ] }
tauri-plugin-opener = "2.5.2"
tauri-plugin-os = "2.3.2"
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.145"
base64 = "0.22"
tokio = { version = "1.48.0", features = [
  "rt-multi-thread",
  "sync",
  "time"
] }

# macOS 平台依赖
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"
objc2 = "0.6.3"
objc2-foundation = { version = "0.3.2", features = [
  "NSString",
  "NSData",
  "NSDictionary",
  "NSValue",
  "NSDate",
  "NSBundle",
  "NSURL",
  "NSGeometry"
] }
objc2-app-kit = { version = "0.3.2", features = [
  "NSApplication",
  "NSRunningApplication",
  "NSWorkspace",
  "NSImage",
  "NSBitmapImageRep",
  "NSImageRep",
  "NSWindow",
  "NSView",
  "NSVisualEffectView"
] }
block2 = "0.6.2"
mediaremote-rs = "0.1.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = [
  "winuser",
  "processthreadsapi",
  "psapi",
  "handleapi",
  "winnt",
  "shellapi",
  "commctrl",
  "libloaderapi",
  "wingdi",
] }
windows = { version = "0.61.1", features = [
  "Media_Control",
  "Foundation",
  "Media_Playback",
  "Storage",
  "Storage_Streams",
] }
image = "0.24"
